控制器和视图

--- a/src/Ibw/JobeetBundle/Resources/views/layout.html.twig
+++ b/src/Ibw/JobeetBundle/Resources/views/layout.html.twig
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>
-        {% block title %}
-            Jobeet - 你最好的找工作平台
-        {% endblock %}
+        {% block title %}Jobeet - 你最好的找工作平台{% endblock %}
     </title>
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('bundles/ibwjobeet/css/main.css') }}" type="text/css" media="all"/>
