--- a/src/Ibw/JobeetBundle/Resources/views/layout.html.twig
+++ b/src/Ibw/JobeetBundle/Resources/views/layout.html.twig
@@ -14,7 +14,7 @@
 <div id="container">
     <div id="header">
         <div class="content">
-            <h1><a href="{{ path('ibw_job') }}"><img src="{{ asset('bundles/ibwjobeet/images/logo.jpg') }}" alt="logo"/></a></h1>
+            <h1><a href="{{ path('ibw_jobeet_homepage') }}"><img src="{{ asset('bundles/ibwjobeet/images/logo.jpg') }}" alt="logo"/></a></h1>
             <div id="sub_header">
                 <div class="post">
                     <h2>寻找人</h2>
