--- a/src/Ibw/JobeetBundle/Resources/views/layout.html.twig
+++ b/src/Ibw/JobeetBundle/Resources/views/layout.html.twig
@@ -18,7 +18,7 @@
             <div id="sub_header">
                 <div class="post">
                     <h2>寻找人</h2>
-                    <div><a href="{{ path('ibw_job') }}">发布招聘</a></div>
+                    <div><a href="{{ path('ibw_job_new') }}">发布招聘</a></div>
                 </div>
                 <div class="search">
                     <h2>寻找工作</h2>
