--- a/src/Ibw/JobeetBundle/Resources/views/Job/show.html.twig
+++ b/src/Ibw/JobeetBundle/Resources/views/Job/show.html.twig
@@ -32,7 +32,7 @@
             <small>申请日期 {{ entity.createdat|date('Y-m-d H:i') }}</small>
         </div>
         <div style="padding:20px 0">
-            <a href="{{ path('ibw_job_edit', {'id':entity.id}) }}">编辑</a>
+            <a href="{{ path('ibw_job_edit', {'token':entity.token}) }}">编辑</a>
         </div>
     </div>
 {% endblock %}
