--- a/src/Ibw/JobeetBundle/Resources/views/Job/edit.html.twig
+++ b/src/Ibw/JobeetBundle/Resources/views/Job/edit.html.twig
@@ -1,16 +1,167 @@
 {% extends 'IbwJobeetBundle::layout.html.twig' %}
 
-{% block content -%}
-    <h1>Job edit</h1>
+{#{% block content -%}#}
+    {#<h1>Job creation</h1>#}
 
-    {{ form(edit_form) }}
+    {#{{ form(form) }}#}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('ibw_job') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
-{% endblock %}
+        {#<ul class="record_actions">#}
+    {#<li>#}
+        {#<a href="{{ path('ibw_job') }}">#}
+            {#Back to the list#}
+        {#</a>#}
+    {#</li>#}
+{#</ul>#}
+{#{% endblock %}#}
+
+{% form_theme edit_form _self %}
+    {% block form_errors %}
+        {% spaceless %}
+            {% if errors|length>0 %}
+                <ul class="error_list">
+                    {% for error in errrors %}
+                        <li>{{ error.messageTemplate|trans(error.messageParameters, 'validators') }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endspaceless %}
+    {% endblock form_errors %}
+
+    {% block stylesheets %}
+        {{ parent() }}
+        <link rel="stylesheet" href="{{ asset('bundles/ibwjobeet/css/job.css') }}" type="text/css" media="all"/>
+    {% endblock %}
+
+    {% block content %}
+<h1>创建工作</h1>
+<form action="{{ path('ibw_job_update', {'token': entity.token}) }}" method="post" {{ form_enctype(edit_form) }}>
+    <table id="job_form">
+        <tfoot>
+        <tr>
+            <td colspan="2"><input value="预览你的工作" type="submit"/></td>
+        </tr>
+        </tfoot>
+        <tbody>
+        <tr>
+            <th>{{ form_label(edit_form.category) }}</th>
+            <td>
+                {{ form_errors(edit_form.category) }}
+                {{ form_widget(edit_form.category) }}
+            </td>
+        </tr>
+        <tr>
+            <th>{{ form_label(edit_form.type) }}</th>
+            <td>
+                {{ form_errors(edit_form.type) }}
+                {{ form_widget(edit_form.type) }}
+            </td>
+        </tr>
+        <tr>
+            <th>{{ form_label(edit_form.company) }}</th>
+            <td>
+                {{ form_errors(edit_form.company) }}
+                {{ form_widget(edit_form.company) }}
+            </td>
+        </tr>
+        <tr>
+            <th>{{ form_label(edit_form.file) }}</th>
+            <td>
+                {{ form_errors(edit_form.file) }}
+                {{ form_widget(edit_form.file) }}
+            </td>
+        </tr>
+        <tr>
+            <th>{{ form_label(edit_form.url) }}</th>
+            <td>
+                {{ form_errors(edit_form.url) }}
+                {{ form_widget(edit_form.url) }}
+            </td>
+        </tr>
+        <tr>
+            <th>{{ form_label(edit_form.position) }}</th>
+            <td>
+                {{ form_errors(edit_form.position) }}
+                {{ form_widget(edit_form.position) }}
+            </td>
+        </tr>
+        <tr>
+            <th>{{ form_label(edit_form.location) }}</th>
+            <td>
+                {{ form_errors(edit_form.location) }}
+                {{ form_widget(edit_form.location) }}
+            </td>
+        </tr>
+        <tr>
+            <th>{{ form_label(edit_form.description) }}</th>
+            <td>
+                {{ form_errors(edit_form.description) }}
+                {{ form_widget(edit_form.description) }}
+            </td>
+        </tr>
+        <tr>
+            <th>{{ form_label(edit_form.how_to_apply) }}</th>
+            <td>
+                {{ form_errors(edit_form.how_to_apply) }}
+                {{ form_widget(edit_form.how_to_apply) }}
+            </td>
+        </tr>
+        {#<tr>#}
+        {#<th>{{ form_label(form.token) }}</th>#}
+        {#<td>#}
+        {#{{ form_errors(form.token) }}#}
+        {#{{ form_widget(form.token) }}#}
+        {#</td>#}
+        {#</tr>#}
+        <tr>
+            <th>{{ form_label(edit_form.is_public) }}</th>
+            <td>
+                {{ form_errors(edit_form.is_public) }}
+                {{ form_widget(edit_form.is_public) }}
+                <br /> 是否工作可以被发布
+            </td>
+        </tr>
+        <tr>
+            <th>{{ form_label(edit_form.email) }}</th>
+            <td>
+                {{ form_errors(edit_form.email) }}
+                {{ form_widget(edit_form.email) }}
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    {{ form_end(edit_form) }}
+    <div>
+        {{ form(delete_form) }}
+    </div>
+    {% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
