--- a/src/Ibw/JobeetBundle/Resources/views/Job/new.html.twig
+++ b/src/Ibw/JobeetBundle/Resources/views/Job/new.html.twig
@@ -14,7 +14,7 @@
 {#</ul>#}
 {#{% endblock %}#}
 
-{% form_theme form_self %}
+{% form_theme form _self %}
     {% block form_errors %}
         {% spaceless %}
             {% if errors|length>0 %}
@@ -59,48 +59,77 @@
                     <tr>
                         <th>{{ form_label(form.company) }}</th>
                         <td>
-
+                            {{ form_errors(form.company) }}
+                            {{ form_widget(form.company) }}
                         </td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <td></td>
+                        <th>{{ form_label(form.file) }}</th>
+                        <td>
+                            {{ form_errors(form.file) }}
+                            {{ form_widget(form.file) }}
+                        </td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <td></td>
+                        <th>{{ form_label(form.url) }}</th>
+                        <td>
+                            {{ form_errors(form.url) }}
+                            {{ form_widget(form.url) }}
+                        </td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <td></td>
+                        <th>{{ form_label(form.position) }}</th>
+                        <td>
+                            {{ form_errors(form.position) }}
+                            {{ form_widget(form.position) }}
+                        </td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <td></td>
+                        <th>{{ form_label(form.location) }}</th>
+                        <td>
+                            {{ form_errors(form.location) }}
+                            {{ form_widget(form.location) }}
+                        </td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <td></td>
+                        <th>{{ form_label(form.description) }}</th>
+                        <td>
+                            {{ form_errors(form.description) }}
+                            {{ form_widget(form.description) }}
+                        </td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <td></td>
+                        <th>{{ form_label(form.how_to_apply) }}</th>
+                        <td>
+                            {{ form_errors(form.how_to_apply) }}
+                            {{ form_widget(form.how_to_apply) }}
+                        </td>
+                    </tr>
+                    {#<tr>#}
+                        {#<th>{{ form_label(form.token) }}</th>#}
+                        {#<td>#}
+                            {#{{ form_errors(form.token) }}#}
+                            {#{{ form_widget(form.token) }}#}
+                        {#</td>#}
+                    {#</tr>#}
+                    <tr>
+                        <th>{{ form_label(form.is_public) }}</th>
+                        <td>
+                            {{ form_errors(form.is_public) }}
+                            {{ form_widget(form.is_public) }}
+                            <br /> 是否工作可以被发布
+                        </td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <td></td>
+                        <th>{{ form_label(form.email) }}</th>
+                        <td>
+                            {{ form_errors(form.email) }}
+                            {{ form_widget(form.email) }}
+                        </td>
                     </tr>
                 </tbody>
             </table>
-        {{ form_end('form') }}
+        {{ form_end(form) }}
     {% endblock %}
 
 
