--- a/src/Ibw/JobeetBundle/Resources/views/Job/admin.html.twig
+++ b/src/Ibw/JobeetBundle/Resources/views/Job/admin.html.twig
@@ -24,6 +24,17 @@
                 {% endif %}
             </li>
         {% endif %}
+
+        {% if not job.isActivated %}
+            <li><a href="{{ path('ibw_job_edit', { 'token': job.token }) }}">Edit</a></li>
+            <li>
+                <form action="{{ path('ibw_job_publish', { 'token': job.token }) }}" method="post">
+                    {{ form_widget(publish_form) }}
+                    <button type="submit">Publish</button>
+                </form>
+            </li>
+        {% endif %}
+
         <li>
             [Bookmark this <a href="{{ url('ibw_job_preview'), {'token': job.token, 'company': job.companyslug, 'location': job.locationslug, 'position': job.positionslug} }}">URL</a>]
             为了未来管理这些工作
