--- a/src/Ibw/JobeetBundle/Resources/views/layout.html.twig
+++ b/src/Ibw/JobeetBundle/Resources/views/layout.html.twig
@@ -72,7 +72,7 @@
             </span>
             <ul>
                 <li><a href="">关于 Jobeet</a></li>
-                <li class="feed"><a href="">Full feed</a></li>
+                <li class="feed"><a href="{{ path('ibw_job', {'_format': 'atom'}) }}">Full feed</a></li>
                 <li><a href="">Jobeet API</a></li>
                 <li class="last"><a href="">Affiliates</a></li>
             </ul>
