--- a/src/Ibw/JobeetBundle/Resources/views/layout.html.twig
+++ b/src/Ibw/JobeetBundle/Resources/views/layout.html.twig
@@ -43,6 +43,8 @@
                         <div class="help">请输入一些关键字（城市，国家，地点，...）</div>
                     </form>
                 </div>
+
+
             </div>
         </div>
     </div>
@@ -74,7 +76,7 @@
                 <li><a href="">关于 Jobeet</a></li>
                 <li class="feed"><a href="{{ path('ibw_job', {'_format': 'atom'}) }}">Full feed</a></li>
                 <li><a href="">Jobeet API</a></li>
-                <li class="last"><a href="">Affiliates</a></li>
+                <li class="last"><a href="{{ path('ibw_affiliate_new') }}">Become an affiliate</a></li>
             </ul>
         </div>
     </div>
