--- a/src/Ibw/JobeetBundle/Resources/views/layout.html.twig
+++ b/src/Ibw/JobeetBundle/Resources/views/layout.html.twig
@@ -84,8 +84,16 @@
     </div>
 </div>
     {% block javascripts %}
-       
-        <script type="text/javascript" src="{{ asset('bundles/ibwjobeet/js/jquery-2.1.4.js') }}"></script>
+      <script type="text/javascript" src="{{ asset('bundles/ibwjobeet/js/jquery-2.1.4.js') }}"></script>
+      <script type="text/javascript" src="{{ asset('bundles/ibwjobeet/js/search.js') }}"></script>
     {% endblock %}
 </body>
 </html>
+
+
+
+
+
+
+
+
